# fishmlserv

./: .Dockerfile.swp  Dockerfile  README.md  fly.toml  pyproject.toml
LB/: default.conf
note/: fish.io.ipynb  fishmodel.ipynb  fishmodel.ipynb:Zone.Identifier  model.pkl
src/fishmlserv/: cli.py  curl.py  main.py
tests/: test_curl.py
