[project]
name = "fishmlserv"
version = "1.5.0"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = [
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true 

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
test = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath= [
        ".", "src",
]

[project.scripts]
get_model_path = "fishmlserv.cli:get_model_path"
prediction = "fishmlserv.cli:prediction"

